--- a/page1.css
+++ b/page1.css
@@ -43,7 +43,7 @@ body {
         width: 80px;
         height: 80px;
     }
-    .img3 {
+    .media {
         flex-direction: column;
         margin-right: 0;
     }
@@ -65,9 +65,14 @@ body {
 }
 
             
-.img3 {
+.media {
     margin-right: 50px;
     display: flex;
     gap: 20px;
     align-items: flex-start;
+}
+video {
+    width: 750px;
+    height: 360px;
+    border:#f10000 2px solid;
 }
