--- a/page1.css
+++ b/page1.css
@@ -115,6 +115,10 @@ video {
     .nav {
         gap: 60px;
     }
+    video {
+         width: 750px;
+    height: 360px;
+    }
 }
 
 /* --------------------------------------- */
